--- a/style.css
+++ b/style.css
@@ -19,6 +19,12 @@ h1 {
     text-shadow: 2px 2px #fff;
 }
 
+h2 {
+    color: #0C090A;
+    font-size: 13px;
+    text-shadow: 3px;
+}
+
 h3 {
     color: #0020C2;
     font-size: 15px;
